--- a/src/templates/CaseStudy.module.scss
+++ b/src/templates/CaseStudy.module.scss
@@ -1,20 +1,27 @@
 /* Page components - Case Study */
 
+.pageLayout {
+    & > section, article, aside {
+        margin-bottom: 48px;
+    }
+}
+
 .head {
+    margin: 0 auto;
+    margin-bottom: 2rem;
     .img {
-        margin-bottom: 2rem;
         box-shadow: 0px 16px 48px hsla(0, 0%, 0%, 0.35);
     }
     .info {
         list-style: none;
         padding: 0;
-        font-size: 1.2rem;
+        // font-size: 1.2rem;
     }
 }
 
 /* Case Study contentfulRichText styling - text */
 /* Sets width of text elements */
-.content {
+.content, .head {
     max-width: 780px;
     p {
         font-size: 1.1rem;
@@ -29,7 +36,6 @@
     }
     h2 {
         font-size: 3rem;
-        color:hsla(0, 0%, 100%, 0.961)
     }
     h3 {
         font-size: 2.25rem;
@@ -49,7 +55,7 @@
         margin-bottom: 4rem;
     
         figcaption {
-            text-align: center;
+            // text-align: center;
             font-size: 0.8rem;
             font-style: italic;
             padding-top: 0.5rem;
@@ -59,13 +65,13 @@
 
 /* Grid system for displaying content on large screens */
 @media screen and (min-width: 701px) {
-    .content, .head {
+    .pageLayout {
         display: grid;
         grid-template-columns: [full-start] minmax(1em, 1fr) [main] minmax(min-content, 700px) [main-end] minmax(1em, 1fr) [full-end];
         & > * {
             grid-column: main / main-end;
         }
-        & > .wide {
+        .wide {
             grid-column: full-start / full-end;
         }
     }
